components:button: fix wrong font

--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -165,11 +165,6 @@
           margin-left: 0;
           margin-right: 30px;
         }
-
-        span {
-          font-family: 'Anonymous Pro';
-          font-weight: bold;
-        }
       }
     }
   }
